# simple_rgb

./: .gitmodules  Cargo.toml  flake.nix
src/: main.rs
